--- a/_posts/2019-04-02-refactoring_101.markdown
+++ b/_posts/2019-04-02-refactoring_101.markdown
@@ -15,7 +15,7 @@ The WordOfTheDay CLI displays a welcome message to the user, the current date, a
 
 **The Refactor**
 
-Like all programming languages, object-oriented Ruby has a set of standards/best practices and anti-patterns that should be avoided. I began the refactoring process by first researching what makes for good OO code and what elements should be present in displaying object relationships.  After researching, I felt as if I knew what was expected of my program and I had a more realistic approach to make the necessary changes. 
+Like all programming languages, object-oriented Ruby has a set of standards/best practices and anti-patterns that should be avoided. I began the refactoring process by first researching what makes for good OO code and what elements should be present in displaying object focused relationships.  After researching, I felt as if I knew what was expected of my program and I had a more realistic approach to make the necessary changes. 
 
 After about 5 hours and much debugging using the console and Pry (which are probably my new best friends), I had a program that was explicit in showing object-oriented principles. I was satisfied, which due to an unrealistic desire to reach perfection, is something that doesn't come easily to me.  Not only did my code do a much better job at separating concerns, make better use of methods, become more dry/readable, it also loaded and displayed the data a lot faster.
 
